fix: visibility ctrl class scss fix

--- a/src/pages/Around/Around.scss
+++ b/src/pages/Around/Around.scss
@@ -29,14 +29,14 @@
     }
 }
 
-.new-container {
-    /* Invisible by default */
-    opacity: 0;
-    pointer-events: none;
+// .new-container {
+//     /* Invisible by default */
+//     opacity: 0;
+//     pointer-events: none;
 
-    &.visible {
+//     &.visible {
 
-        opacity: 1;
-        pointer-events: all;
-    }
-}
+//         opacity: 1;
+//         pointer-events: all;
+//     }
+// }
